err/bigml.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/bigml'...
Listing './lib/python3.5/site-packages/bigml/laminar'...
Listing './lib/python3.5/site-packages/bigml/out_model'...
Listing './lib/python3.5/site-packages/bigml/out_model/static'...
Compiling './lib/python3.5/site-packages/bigml/out_model/static/items_analysis.py'...
*** Sorry: IndentationError: unexpected indent (items_analysis.py, line 1)
Compiling './lib/python3.5/site-packages/bigml/out_model/static/python_haddop_csv.py'...
***   File "./lib/python3.5/site-packages/bigml/out_model/static/python_haddop_csv.py", line 26
    self.reader = csv.reader(input, delimiter=',', quotechar='\"')
                                                                 ^
SyntaxError: unexpected EOF while parsing

Compiling './lib/python3.5/site-packages/bigml/out_model/static/python_hadoop_next.py'...
*** Sorry: IndentationError: unexpected indent (python_hadoop_next.py, line 1)
Compiling './lib/python3.5/site-packages/bigml/out_model/static/python_hadoop_reducer.py'...
***   File "./lib/python3.5/site-packages/bigml/out_model/static/python_hadoop_reducer.py", line 13
    result = \"[%s, %s]\" % (values, prediction)
                                               ^
SyntaxError: unexpected character after line continuation character

Compiling './lib/python3.5/site-packages/bigml/out_model/static/term_analysis.py'...
*** Sorry: IndentationError: unexpected indent (term_analysis.py, line 1)
Listing './lib/python3.5/site-packages/bigml/out_tree'...
Listing './lib/python3.5/site-packages/bigml/tests'...
Listing './lib/python3.5/site-packages/bigml/tests/my_ensemble'...
Listing './lib/python3.5/site-packages/bigml-4.13.7.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_toolbelt'...
Listing './lib/python3.5/site-packages/requests_toolbelt/adapters'...
Listing './lib/python3.5/site-packages/requests_toolbelt/auth'...
Listing './lib/python3.5/site-packages/requests_toolbelt/cookies'...
Listing './lib/python3.5/site-packages/requests_toolbelt/downloadutils'...
Listing './lib/python3.5/site-packages/requests_toolbelt/multipart'...
Listing './lib/python3.5/site-packages/requests_toolbelt/threaded'...
Listing './lib/python3.5/site-packages/requests_toolbelt/utils'...
Listing './lib/python3.5/site-packages/requests_toolbelt-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
